TODO: Fix search query mongo
